# vex-halt

datasets/vex_halt/: index.json
datasets/vex_halt/agt/: agentic_safety.json
datasets/vex_halt/api/: clean_control.json  context_poisoning.json  direct_injection.json  tool_abuse.json
datasets/vex_halt/cct/: ambiguous.json  easy.json  medium.json
datasets/vex_halt/fct/: math_problems.json  scientific_reasoning.json
datasets/vex_halt/frontier/: adversarial_reasoning.json  research_math.json  (+2 more)
vex-halt/: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  FINAL_STATE.md  LICENSE  README.md  SECURITY.md
vex-halt/.github/workflows/: ci.yml
vex-halt/datasets/vex_halt/agt/: long_horizon.json  tool_use.json
vex-halt/datasets/vex_halt/api/: indirect_injection.json  jailbreaks.json
vex-halt/datasets/vex_halt/cct/: hard.json  unanswerable.json
vex-halt/datasets/vex_halt/eas/: uncertainty_classification.json
vex-halt/datasets/vex_halt/fct/: flawed_premises.json  logic_puzzles.json  temporal_reasoning.json
vex-halt/datasets/vex_halt/frontier/: abstract_pattern.json  meta_cognitive.json
vex-halt/datasets/vex_halt/hht/: fake_entities.json  fake_events.json  fake_products.json  logical_impossibilities.json  plausible_falsehoods.json
vex-halt/datasets/vex_halt/mem/: episodic_recall.json  memory_evaluation.json
vex-halt/datasets/vex_halt/mtc/: tool_chains.json
vex-halt/src/: config.rs  dataset.rs  evaluator.rs  llm_judge.rs  main.rs  merkle.rs  provider.rs  report.rs  runner.rs  scoring.rs  tools.rs  types.rs  vex_integration.rs
vex-halt/tests/: integration_test.rs
(+9 files in other folders)
